database/base/db_network/NetworkPolicy.yaml
#oc get networkpolicy
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: gba-allow-from-f5-ingress
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: gba
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-gba-db
  labels:
    postgres-operator.crunchydata.com/cluster: gba
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: gba
  ingress:
    - from:
        - podSelector: 
            matchLabels:
              postgres-operator.crunchydata.com/cluster: gba
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8432
        - protocol: TCP
          port: 8008
        - protocol: TCP
          port: 2022
# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: allow-gba-monitoring
#   labels:
#     postgres-operator.crunchydata.com/cluster: hippo-ha
# spec:
#   podSelector:
#     matchLabels:
#       postgres-operator.crunchydata.com/cluster: hippo-ha
#   ingress:
#     - from:
#         - namespaceSelector:
#             name: be1c6b
#             environment: tools
#       ports:
#         - protocol: TCP
#           port: 9187
